apps/common/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
      app.kubernetes.io/instance: adguard-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/instance: adguard-home
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: adguard-home
          image: "adguard/adguardhome:v0.106.3"
          imagePullPolicy: IfNotPresent
          args:
            - --config
            - /opt/adguardhome/conf/AdGuardHome.yaml
            - --work-dir
            - /opt/adguardhome/work
            - --no-check-update
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: adguard-home-config
              mountPath: /tmp/AdGuardHome.yaml
              subPath: AdGuardHome.yaml
            - name: config
              mountPath: /opt/adguardhome/conf
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: adguard-home-config
          configMap:
            name: adguard-home-config
        - name: config
          persistentVolumeClaim:
            claimName: adguard-home-config
