apps/common/adguard/services.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: adguard-home-dns-tcp
#  labels:
#    app.kubernetes.io/name: adguard-home
#    app.kubernetes.io/instance: adguard-home
#  annotations:
#spec:
#  type: NodePort
#  ports:
#  - port: 53
#    targetPort: 53
#    protocol: TCP
#    name: dns-tcp
#  selector:
#    app.kubernetes.io/name: adguard-home
#    app.kubernetes.io/instance: adguard-home
#---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-udp
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 53
    targetPort: dns-udp
    protocol: UDP
    name: dns-udp
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
#  - port: 443
#    targetPort: https
#    protocol: TCP
#    name: https
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
