apps/common/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adguard
  namespace: adguard-home
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-adguard-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://app.company/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;spec:
spec:
  tls:
  - hosts:
    - adguard.internal.com
    secretName: internal-com-tls
  rules:
  - host: adguard.internal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home-web
            port:
              number: 80
  ingressClassName: nginx
